# cuda-hpc

./: CMakeLists.txt  README.md  main.cu  uccd_roc.cu
src/: ccd.cu  ccd.cuh  constants.cuh  data.cu  data.cuh  flux.cu  flux.cuh  grids.cu  grids.cuh  runge_kutta_solver.cu  runge_kutta_solver.cuh  timer.cu  timer.cuh  utils.cu  utils.cuh  variable.cu  variable.cuh
